--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^4.3.1",
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
     "react-router-dom": "^5.2.0",
